// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeFilterInputType Definition Article has a filter input type: ArticleFilterInput 1`] = `
""""The "Article" nodes' filter"""
input ArticleFilterInput {
  id: UUIDv4
  id_not: UUIDv4
  id_in: [UUIDv4!]
  id_not_in: [UUIDv4!]
  status: ArticleStatus
  status_not: ArticleStatus
  status_in: [ArticleStatus!]
  status_not_in: [ArticleStatus!]
  title: NonEmptyTrimmedString
  title_not: NonEmptyTrimmedString
  title_in: [NonEmptyTrimmedString!]
  title_not_in: [NonEmptyTrimmedString!]
  title_contains: NonEmptyString
  title_not_contains: NonEmptyString
  title_starts_with: NonEmptyString
  title_not_starts_with: NonEmptyString
  title_ends_with: NonEmptyString
  title_not_ends_with: NonEmptyString
  slug: NonEmptyTrimmedString
  slug_not: NonEmptyTrimmedString
  slug_in: [NonEmptyTrimmedString!]
  slug_not_in: [NonEmptyTrimmedString!]
  slug_contains: NonEmptyString
  slug_not_contains: NonEmptyString
  slug_starts_with: NonEmptyString
  slug_not_starts_with: NonEmptyString
  slug_ends_with: NonEmptyString
  slug_not_ends_with: NonEmptyString
  body: DraftJS
  body_not: DraftJS
  body_is_null: Boolean
  body_contains: NonEmptyString
  body_not_contains: NonEmptyString
  body_starts_with: NonEmptyString
  body_not_starts_with: NonEmptyString
  body_ends_with: NonEmptyString
  body_not_ends_with: NonEmptyString
  category: CategoryFilterInput
  category_not: CategoryFilterInput
  category_is_null: Boolean
  createdBy: UserFilterInput
  createdBy_not: UserFilterInput
  createdBy_is_null: Boolean
  createdAt: DateTime
  createdAt_not: DateTime
  createdAt_in: [DateTime!]
  createdAt_not_in: [DateTime!]
  createdAt_gt: DateTime
  createdAt_gte: DateTime
  createdAt_lt: DateTime
  createdAt_lte: DateTime
  updatedBy: UserFilterInput
  updatedBy_not: UserFilterInput
  updatedBy_is_null: Boolean
  updatedAt: DateTime
  updatedAt_not: DateTime
  updatedAt_in: [DateTime!]
  updatedAt_not_in: [DateTime!]
  updatedAt_gt: DateTime
  updatedAt_gte: DateTime
  updatedAt_lt: DateTime
  updatedAt_lte: DateTime
  metas: JSONObject
  metas_not: JSONObject
  metas_is_null: Boolean
  highlighted: Boolean
  highlighted_not: Boolean
  highlighted_is_null: Boolean
  highlighted_in: [Boolean]
  highlighted_not_in: [Boolean]
  sponsored: Boolean
  sponsored_not: Boolean
  sponsored_is_null: Boolean
  sponsored_in: [Boolean]
  sponsored_not_in: [Boolean]
  views: UnsignedBigInt
  views_not: UnsignedBigInt
  views_in: [UnsignedBigInt!]
  views_not_in: [UnsignedBigInt!]
  views_gt: UnsignedBigInt
  views_gte: UnsignedBigInt
  views_lt: UnsignedBigInt
  views_lte: UnsignedBigInt
  score: UnsignedFloat
  score_not: UnsignedFloat
  score_in: [UnsignedFloat!]
  score_not_in: [UnsignedFloat!]
  score_gt: UnsignedFloat
  score_gte: UnsignedFloat
  score_lt: UnsignedFloat
  score_lte: UnsignedFloat
  machineTags: JSONArray
  machineTags_not: JSONArray
  machineTags_is_null: Boolean
  tags_every: ArticleTagFilterInput
  tags_some: ArticleTagFilterInput
  tags_none: ArticleTagFilterInput
  tagCount: UnsignedInt
  tagCount_not: UnsignedInt
  tagCount_gt: UnsignedInt
  tagCount_gte: UnsignedInt
  tagCount_lt: UnsignedInt
  tagCount_lte: UnsignedInt
  extension: ArticleExtensionFilterInput
  extension_not: ArticleExtensionFilterInput
  extension_is_null: Boolean
  AND: [ArticleFilterInput]
  OR: [ArticleFilterInput]
  NOT: ArticleFilterInput
}"
`;

exports[`NodeFilterInputType Definition ArticleExtension has a filter input type: ArticleExtensionFilterInput 1`] = `
""""The "ArticleExtension" nodes' filter"""
input ArticleExtensionFilterInput {
  article: ArticleFilterInput
  article_not: ArticleFilterInput
  source: NonEmptyTrimmedString
  source_not: NonEmptyTrimmedString
  source_is_null: Boolean
  source_in: [NonEmptyTrimmedString]
  source_not_in: [NonEmptyTrimmedString]
  source_contains: NonEmptyString
  source_not_contains: NonEmptyString
  source_starts_with: NonEmptyString
  source_not_starts_with: NonEmptyString
  source_ends_with: NonEmptyString
  source_not_ends_with: NonEmptyString
  AND: [ArticleExtensionFilterInput]
  OR: [ArticleExtensionFilterInput]
  NOT: ArticleExtensionFilterInput
}"
`;

exports[`NodeFilterInputType Definition ArticleTag has a filter input type: ArticleTagFilterInput 1`] = `
""""The "ArticleTag" nodes' filter"""
input ArticleTagFilterInput {
  article: ArticleFilterInput
  article_not: ArticleFilterInput
  tag: TagFilterInput
  tag_not: TagFilterInput
  order: UnsignedInt
  order_not: UnsignedInt
  order_in: [UnsignedInt!]
  order_not_in: [UnsignedInt!]
  order_gt: UnsignedInt
  order_gte: UnsignedInt
  order_lt: UnsignedInt
  order_lte: UnsignedInt
  moderations_every: ArticleTagModerationFilterInput
  moderations_some: ArticleTagModerationFilterInput
  moderations_none: ArticleTagModerationFilterInput
  moderationCount: UnsignedInt
  moderationCount_not: UnsignedInt
  moderationCount_gt: UnsignedInt
  moderationCount_gte: UnsignedInt
  moderationCount_lt: UnsignedInt
  moderationCount_lte: UnsignedInt
  AND: [ArticleTagFilterInput]
  OR: [ArticleTagFilterInput]
  NOT: ArticleTagFilterInput
}"
`;

exports[`NodeFilterInputType Definition ArticleTagModeration has a filter input type: ArticleTagModerationFilterInput 1`] = `
""""The "ArticleTagModeration" nodes' filter"""
input ArticleTagModerationFilterInput {
  articleTag: ArticleTagFilterInput
  articleTag_not: ArticleTagFilterInput
  moderator: UserFilterInput
  moderator_not: UserFilterInput
  moderation: NonEmptyTrimmedString
  moderation_not: NonEmptyTrimmedString
  moderation_is_null: Boolean
  moderation_in: [NonEmptyTrimmedString]
  moderation_not_in: [NonEmptyTrimmedString]
  moderation_contains: NonEmptyString
  moderation_not_contains: NonEmptyString
  moderation_starts_with: NonEmptyString
  moderation_not_starts_with: NonEmptyString
  moderation_ends_with: NonEmptyString
  moderation_not_ends_with: NonEmptyString
  AND: [ArticleTagModerationFilterInput]
  OR: [ArticleTagModerationFilterInput]
  NOT: ArticleTagModerationFilterInput
}"
`;

exports[`NodeFilterInputType Definition Category has a filter input type: CategoryFilterInput 1`] = `
""""The "Category" nodes' filter"""
input CategoryFilterInput {
  id: UUIDv4
  id_not: UUIDv4
  id_in: [UUIDv4!]
  id_not_in: [UUIDv4!]
  title: NonEmptyTrimmedString
  title_not: NonEmptyTrimmedString
  title_in: [NonEmptyTrimmedString!]
  title_not_in: [NonEmptyTrimmedString!]
  title_contains: NonEmptyString
  title_not_contains: NonEmptyString
  title_starts_with: NonEmptyString
  title_not_starts_with: NonEmptyString
  title_ends_with: NonEmptyString
  title_not_ends_with: NonEmptyString
  slug: NonEmptyTrimmedString
  slug_not: NonEmptyTrimmedString
  slug_in: [NonEmptyTrimmedString!]
  slug_not_in: [NonEmptyTrimmedString!]
  slug_contains: NonEmptyString
  slug_not_contains: NonEmptyString
  slug_starts_with: NonEmptyString
  slug_not_starts_with: NonEmptyString
  slug_ends_with: NonEmptyString
  slug_not_ends_with: NonEmptyString
  parent: CategoryFilterInput
  parent_not: CategoryFilterInput
  parent_is_null: Boolean
  order: UnsignedInt
  order_not: UnsignedInt
  order_in: [UnsignedInt!]
  order_not_in: [UnsignedInt!]
  order_gt: UnsignedInt
  order_gte: UnsignedInt
  order_lt: UnsignedInt
  order_lte: UnsignedInt
  children_every: CategoryFilterInput
  children_some: CategoryFilterInput
  children_none: CategoryFilterInput
  childCount: UnsignedInt
  childCount_not: UnsignedInt
  childCount_gt: UnsignedInt
  childCount_gte: UnsignedInt
  childCount_lt: UnsignedInt
  childCount_lte: UnsignedInt
  articles_every: ArticleFilterInput
  articles_some: ArticleFilterInput
  articles_none: ArticleFilterInput
  articleCount: UnsignedInt
  articleCount_not: UnsignedInt
  articleCount_gt: UnsignedInt
  articleCount_gte: UnsignedInt
  articleCount_lt: UnsignedInt
  articleCount_lte: UnsignedInt
  AND: [CategoryFilterInput]
  OR: [CategoryFilterInput]
  NOT: CategoryFilterInput
}"
`;

exports[`NodeFilterInputType Definition Tag has a filter input type: TagFilterInput 1`] = `
""""The "Tag" nodes' filter"""
input TagFilterInput {
  id: UUIDv4
  id_not: UUIDv4
  id_in: [UUIDv4!]
  id_not_in: [UUIDv4!]
  deprecated: Boolean
  deprecated_not: Boolean
  deprecated_is_null: Boolean
  deprecated_in: [Boolean]
  deprecated_not_in: [Boolean]
  title: NonEmptyTrimmedString
  title_not: NonEmptyTrimmedString
  title_in: [NonEmptyTrimmedString!]
  title_not_in: [NonEmptyTrimmedString!]
  title_contains: NonEmptyString
  title_not_contains: NonEmptyString
  title_starts_with: NonEmptyString
  title_not_starts_with: NonEmptyString
  title_ends_with: NonEmptyString
  title_not_ends_with: NonEmptyString
  slug: NonEmptyTrimmedString
  slug_not: NonEmptyTrimmedString
  slug_in: [NonEmptyTrimmedString!]
  slug_not_in: [NonEmptyTrimmedString!]
  slug_contains: NonEmptyString
  slug_not_contains: NonEmptyString
  slug_starts_with: NonEmptyString
  slug_not_starts_with: NonEmptyString
  slug_ends_with: NonEmptyString
  slug_not_ends_with: NonEmptyString
  createdAt: DateTime
  createdAt_not: DateTime
  createdAt_in: [DateTime!]
  createdAt_not_in: [DateTime!]
  createdAt_gt: DateTime
  createdAt_gte: DateTime
  createdAt_lt: DateTime
  createdAt_lte: DateTime
  updatedAt: DateTime
  updatedAt_not: DateTime
  updatedAt_in: [DateTime!]
  updatedAt_not_in: [DateTime!]
  updatedAt_gt: DateTime
  updatedAt_gte: DateTime
  updatedAt_lt: DateTime
  updatedAt_lte: DateTime
  articles_every: ArticleTagFilterInput
  articles_some: ArticleTagFilterInput
  articles_none: ArticleTagFilterInput
  articleCount: UnsignedInt
  articleCount_not: UnsignedInt
  articleCount_gt: UnsignedInt
  articleCount_gte: UnsignedInt
  articleCount_lt: UnsignedInt
  articleCount_lte: UnsignedInt
  AND: [TagFilterInput]
  OR: [TagFilterInput]
  NOT: TagFilterInput
}"
`;

exports[`NodeFilterInputType Definition User has a filter input type: UserFilterInput 1`] = `
""""The "User" nodes' filter"""
input UserFilterInput {
  id: UUIDv4
  id_not: UUIDv4
  id_in: [UUIDv4!]
  id_not_in: [UUIDv4!]
  username: NonEmptyTrimmedString
  username_not: NonEmptyTrimmedString
  username_in: [NonEmptyTrimmedString!]
  username_not_in: [NonEmptyTrimmedString!]
  username_contains: NonEmptyString
  username_not_contains: NonEmptyString
  username_starts_with: NonEmptyString
  username_not_starts_with: NonEmptyString
  username_ends_with: NonEmptyString
  username_not_ends_with: NonEmptyString
  createdArticles_every: ArticleFilterInput
  createdArticles_some: ArticleFilterInput
  createdArticles_none: ArticleFilterInput
  createdArticleCount: UnsignedInt
  createdArticleCount_not: UnsignedInt
  createdArticleCount_gt: UnsignedInt
  createdArticleCount_gte: UnsignedInt
  createdArticleCount_lt: UnsignedInt
  createdArticleCount_lte: UnsignedInt
  updatedArticles_every: ArticleFilterInput
  updatedArticles_some: ArticleFilterInput
  updatedArticles_none: ArticleFilterInput
  updatedArticleCount: UnsignedInt
  updatedArticleCount_not: UnsignedInt
  updatedArticleCount_gt: UnsignedInt
  updatedArticleCount_gte: UnsignedInt
  updatedArticleCount_lt: UnsignedInt
  updatedArticleCount_lte: UnsignedInt
  profile: UserProfileFilterInput
  profile_not: UserProfileFilterInput
  profile_is_null: Boolean
  articleTagModerations_every: ArticleTagModerationFilterInput
  articleTagModerations_some: ArticleTagModerationFilterInput
  articleTagModerations_none: ArticleTagModerationFilterInput
  articleTagModerationCount: UnsignedInt
  articleTagModerationCount_not: UnsignedInt
  articleTagModerationCount_gt: UnsignedInt
  articleTagModerationCount_gte: UnsignedInt
  articleTagModerationCount_lt: UnsignedInt
  articleTagModerationCount_lte: UnsignedInt
  AND: [UserFilterInput]
  OR: [UserFilterInput]
  NOT: UserFilterInput
}"
`;

exports[`NodeFilterInputType Definition UserProfile has a filter input type: UserProfileFilterInput 1`] = `
""""The "UserProfile" nodes' filter"""
input UserProfileFilterInput {
  user: UserFilterInput
  user_not: UserFilterInput
  birthday: Date
  birthday_not: Date
  birthday_is_null: Boolean
  birthday_in: [Date]
  birthday_not_in: [Date]
  birthday_gt: Date
  birthday_gte: Date
  birthday_lt: Date
  birthday_lte: Date
  facebookId: ID
  facebookId_not: ID
  facebookId_is_null: Boolean
  facebookId_in: [ID]
  facebookId_not_in: [ID]
  googleId: ID
  googleId_not: ID
  googleId_is_null: Boolean
  googleId_in: [ID]
  googleId_not_in: [ID]
  twitterHandle: ID
  twitterHandle_not: ID
  twitterHandle_is_null: Boolean
  twitterHandle_in: [ID]
  twitterHandle_not_in: [ID]
  AND: [UserProfileFilterInput]
  OR: [UserProfileFilterInput]
  NOT: UserProfileFilterInput
}"
`;
